still need to write contexts who have descendant examples that run.

--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Domain\MethodContext.cs" />
     <Compile Include="Domain\ExceptionNotThrown.cs" />
     <Compile Include="DefaultConventions.cs" />
+    <Compile Include="Domain\RunnerInvocation.cs" />
     <Compile Include="Domain\Tags.cs" />
     <Compile Include="Each.cs" />
     <Compile Include="Domain\ActionIndexer.cs" />
