--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ClassContextBug\NestContextsTests.cs" />
     <Compile Include="ClassContextBug\NestedContexts.cs" />
     <Compile Include="describe_Conventions.cs" />
+    <Compile Include="describe_RunningSpecs\describe_LiveFormatter_with_context_filter.cs" />
     <Compile Include="describe_RunningSpecs\describe_example.cs" />
     <Compile Include="describe_RunningSpecs\describe_Levels.cs" />
     <Compile Include="describe_RunningSpecs\describe_Levels_Inheritance.cs" />
