fixed bug introduced by tags, causing pending examples not to be reported when run under a context filter

--- a/nspec.nuspec
+++ b/nspec.nuspec
@@ -2,14 +2,14 @@
 <package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>nspec</id>
-    <version>0.9.52</version>
+    <version>0.9.53</version>
     <iconUrl>http://nspec.org/themes/contoso/content/images/logo.png</iconUrl>
     <licenseUrl>https://github.com/mattflo/NSpec/blob/master/license.txt</licenseUrl>
     <authors>Matt Florence, Amir Rajan</authors>
     <owners>Matt Florence, Amir Rajan</owners>
     <projectUrl>http://www.nspec.org</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>NSpec is a BDD (Behavior Driven Development) framework for .NET of the xSpec (Context/Specification) flavor. NSpec is intended to drive development by specifying behavior within a declared context. NSpec is heavily inspired by RSpec and built upon the NUnit assertion library.</description>
+    <description>NSpec is a BDD (Behavior Driven Development) framework for .NET of the xSpec (Context/Specification) flavor. NSpec is intended to drive development by specifying behavior within a declared context. NSpec is heavily inspired by RSpec and build upon the NUnit assertion library.</description>
     <language>en-US</language>
     <tags>testing bdd tdd</tags>
   </metadata>
