--- a/RakeFile
+++ b/RakeFile
@@ -39,9 +39,15 @@ task :zip do
   Zip::ZipFile.open(fileName, Zip::ZipFile::CREATE) { 
   |zipfile|
     zipfile.add 'NSpecRunner.exe', 'NSpecRunner\bin\Debug\NSpecRunner.exe'
-    zipfile.add 'NSpec.dll', 'NSpecRunner\bin\Debug\NSpec.dll'
-    zipfile.add 'nunit.framework.dll', 'NSpecRunner\bin\Debug\nunit.framework.dll'
+    zipfile.add 'NSpec.dll', 'NSpec\bin\Debug\NSpec.dll'
   }
+end
+
+desc 'merge nunit dll into nspec'
+task :ilmerge do
+  File.rename 'NSpec\bin\Debug\NSpec.dll','NSpec\bin\Debug\NSpec-partial.dll'
+  sh 'ilmerge NSpec\bin\Debug\NSpec-partial.dll NSpec\bin\Debug\nunit.framework.dll /out:NSpec\bin\Debug\NSpec.dll /internalize' 
+  File.delete'NSpec\bin\Debug\NSpec-partial.dll'
 end
 
 task :version => [:bump_version, :version_gallio_adapter] do
