adding greater than demo spec

--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Demo\before_each_on_the_class_level.cs" />
     <Compile Include="Demo\describe_a_finished_TicTacToeGame.cs" />
     <Compile Include="Demo\describe_Extensions.cs" />
+    <Compile Include="Demo\describe_greater_than.cs" />
     <Compile Include="Demo\describe_shoulds.cs" />
     <Compile Include="Demo\describe_tags.cs" />
     <Compile Include="Demo\inherited_spec_class.cs" />
