--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -65,10 +65,10 @@
     <Compile Include="describe_RunningSpecs\describe_tag_filtering.cs" />
     <Compile Include="describe_RunningSpecs\describe_context_level_tagging.cs" />
     <Compile Include="describe_RunningSpecs\describe_example_level_tagging.cs" />
-    <Compile Include="describe_RunningSpecs\describe_expected_exception_in_act.cs" />
+    <Compile Include="describe_RunningSpecs\Exceptions\describe_expected_exception_in_act.cs" />
     <Compile Include="describe_RunningSpecs\describe_class_level_after.cs" />
     <Compile Include="describe_RunningSpecs\describe_method_level_examples.cs" />
-    <Compile Include="describe_RunningSpecs\describe_unexpected_exception_in_act.cs" />
+    <Compile Include="describe_RunningSpecs\Exceptions\describe_unexpected_exception_in_act.cs" />
     <Compile Include="describe_RunningSpecs\describe_xdescribe.cs" />
     <Compile Include="describe_RunningSpecs\describe_class_level_before.cs" />
     <Compile Include="describe_RunningSpecs\describe_xcontext.cs" />
@@ -76,17 +76,17 @@
     <Compile Include="describe_RunningSpecs\describe_action_indexer_add_operator.cs" />
     <Compile Include="describe_Context.cs" />
     <Compile Include="describe_Example.cs" />
-    <Compile Include="describe_RunningSpecs\describe_expected_exception.cs" />
+    <Compile Include="describe_RunningSpecs\Exceptions\describe_expected_exception.cs" />
     <Compile Include="describe_RunningSpecs\describe_implicit_befores.cs" />
     <Compile Include="describe_RunningSpecs\describe_todo.cs" />
     <Compile Include="describe_ContextCollection.cs" />
     <Compile Include="describe_DefaultConventions.cs" />
-    <Compile Include="describe_RunningSpecs\when_method_level_before_contains_exception.cs" />
+    <Compile Include="describe_RunningSpecs\Exceptions\when_method_level_before_contains_exception.cs" />
     <Compile Include="describe_Tags.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="describe_RunningSpecs\when_act_contains_exception.cs" />
-    <Compile Include="describe_RunningSpecs\when_after_contains_exception.cs" />
-    <Compile Include="describe_RunningSpecs\when_before_contains_exception.cs" />
+    <Compile Include="describe_RunningSpecs\Exceptions\when_act_contains_exception.cs" />
+    <Compile Include="describe_RunningSpecs\Exceptions\when_after_contains_exception.cs" />
+    <Compile Include="describe_RunningSpecs\Exceptions\when_before_contains_exception.cs" />
     <Compile Include="describe_ContextBuilder.cs" />
     <Compile Include="describe_RunningSpecs\describe_method_level_befores.cs" />
     <Compile Include="describe_SpecFinder.cs" />
