--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Domain\MethodContext.cs" />
     <Compile Include="Domain\ExceptionNotThrown.cs" />
     <Compile Include="DefaultConventions.cs" />
+    <Compile Include="Domain\MethodExample.cs" />
     <Compile Include="Domain\RunnerInvocation.cs" />
     <Compile Include="Domain\Tags.cs" />
     <Compile Include="Each.cs" />
