--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -52,6 +52,7 @@
     <Compile Include="DebuggerShim.cs" />
     <Compile Include="describe_Assertions.cs" />
     <Compile Include="describe_Conventions.cs" />
+    <Compile Include="describe_Output\when_run_by_NSpecRunner.cs" />
     <Compile Include="describe_RunningSpecs\describe_abstract_class_execution_order.cs" />
     <Compile Include="describe_RunningSpecs\describe_class_level_before_for_abstract_class.cs" />
     <Compile Include="describe_RunningSpecs\describe_context_level_beforeAll.cs" />
@@ -81,7 +82,7 @@
     <Compile Include="describe_RunningSpecs\describe_todo.cs" />
     <Compile Include="describe_ContextCollection.cs" />
     <Compile Include="describe_DefaultConventions.cs" />
-    <Compile Include="describe_RunningSpecs\Output\foobar.cs" />
+    <Compile Include="describe_Output\describe_before.cs" />
     <Compile Include="SpecExtensions.cs" />
     <Compile Include="describe_RunningSpecs\Exceptions\when_method_level_before_contains_exception.cs" />
     <Compile Include="describe_Tags.cs" />
