--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -68,13 +68,13 @@
     <Compile Include="Demo\describe_car.cs" />
     <Compile Include="WebSite\describe_expected_exception.cs" />
     <Compile Include="WebSite\describe_helpers.cs" />
-    <Compile Include="WebSite\describe_method_level_examples.cs">
+    <Compile Include="Demo\describe_method_level_examples.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="WebSite\given_the_sequence_continues_with_2.cs" />
-    <Compile Include="WebSite\describe_Math.cs" />
+    <Compile Include="Demo\describe_Math.cs" />
     <Compile Include="WebSite\describe_pending.cs" />
-    <Compile Include="WebSite\describe_PrimeFactors.cs" />
+    <Compile Include="Demo\describe_PrimeFactors.cs" />
     <Compile Include="WebSite\describe_specifications.cs" />
     <Compile Include="Demo\multiple_befores.cs" />
     <Compile Include="Demo\describe_VendingMachine.cs" />
