--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -76,6 +76,7 @@
     <Compile Include="describe_output.cs" />
     <Compile Include="describe_RunningSpecs\describe_abstract_class_execution_order.cs" />
     <Compile Include="describe_RunningSpecs\describe_class_level_before_for_abstract_class.cs" />
+    <Compile Include="describe_RunningSpecs\describe_context_level_afterAll.cs" />
     <Compile Include="describe_RunningSpecs\describe_context_level_beforeAll.cs" />
     <Compile Include="describe_RunningSpecs\describe_fail_fast.cs" />
     <Compile Include="describe_RunningSpecs\describe_Method_Invocation_Sequence.cs" />
