updated test name to for website deployment

--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -69,7 +69,7 @@
     <Compile Include="WebSite\describe_class_level.cs" />
     <Compile Include="Demo\decribe_TicTacToeGame.cs" />
     <Compile Include="Demo\describe_car.cs" />
-    <Compile Include="WebSite\describe_expected_exception.cs" />
+    <Compile Include="WebSite\describe_exception.cs" />
     <Compile Include="WebSite\describe_helpers.cs" />
     <Compile Include="Demo\describe_method_level_examples.cs">
       <SubType>Code</SubType>
