more abstract middle class spec cleanup

--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -95,7 +95,7 @@
     <Compile Include="describe_RunningSpecs\describe_context_level_tagging.cs" />
     <Compile Include="describe_RunningSpecs\describe_example_level_tagging.cs" />
     <Compile Include="describe_RunningSpecs\Exceptions\describe_expected_exception_in_act.cs" />
-    <Compile Include="describe_RunningSpecs\describe_class_level_after.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\describe_middle_abstract.cs" />
     <Compile Include="describe_RunningSpecs\describe_method_level_examples.cs" />
     <Compile Include="describe_RunningSpecs\Exceptions\describe_unexpected_exception_in_act.cs" />
     <Compile Include="describe_RunningSpecs\describe_xdescribe.cs" />
