--- a/nspec.nuspec
+++ b/nspec.nuspec
@@ -3,7 +3,7 @@
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>nspec</id>
     <version>0.9.62</version>
-    <iconUrl>http://nspec.org/themes/contoso/content/images/logo.png</iconUrl>
+    <iconUrl>http://nspec.org/images/logo.png</iconUrl>
     <licenseUrl>https://github.com/mattflo/NSpec/blob/master/license.txt</licenseUrl>
     <authors>Matt Florence, Amir Rajan</authors>
     <owners>Matt Florence, Amir Rajan</owners>
