overrides added to redefine stacktrace and redefine exception

--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Model\User.cs" />
     <Compile Include="Model\Account.cs" />
     <Compile Include="WebSite\describe_act.cs" />
+    <Compile Include="WebSite\describe_changing_failure_exception.cs" />
     <Compile Include="WebSite\describe_class_level.cs" />
     <Compile Include="Demo\decribe_TicTacToeGame.cs" />
     <Compile Include="WebSite\describe_exception.cs" />
@@ -74,6 +75,7 @@
     </Compile>
     <Compile Include="WebSite\describe_inheritance.cs" />
     <Compile Include="Demo\describe_Math.cs" />
+    <Compile Include="WebSite\describe_changing_stacktrace_message.cs" />
     <Compile Include="WebSite\describe_pending.cs" />
     <Compile Include="Demo\describe_PrimeFactors.cs" />
     <Compile Include="WebSite\describe_shared_behavior.cs" />
