--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -90,6 +90,7 @@
     <Compile Include="describe_RunningSpecs\describe_example.cs" />
     <Compile Include="describe_RunningSpecs\describe_Levels.cs" />
     <Compile Include="describe_RunningSpecs\describe_Levels_Inheritance.cs" />
+    <Compile Include="describe_RunningSpecs\describe_overriding_exception.cs" />
     <Compile Include="describe_RunningSpecs\describe_tag_filtering.cs" />
     <Compile Include="describe_RunningSpecs\describe_context_level_tagging.cs" />
     <Compile Include="describe_RunningSpecs\describe_example_level_tagging.cs" />
