ConsoleFormatter now strips the word 'Spec' or 'Specs' from the end of the context name so that the test output can display the name of the class being tested.

--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -72,6 +72,7 @@
     <Compile Include="DebuggerShim.cs" />
     <Compile Include="describe_Assertions.cs" />
     <Compile Include="describe_cecil.cs" />
+    <Compile Include="describe_ConsoleFormatter.cs" />
     <Compile Include="describe_Conventions.cs" />
     <Compile Include="describe_output.cs" />
     <Compile Include="describe_RunningSpecs\describe_before_and_after\abstract_class.cs" />
