Renamed extension files and added new namespace to test files, added a few more comments

--- a/NSpec.Assertions/NSpec.Assertions.csproj
+++ b/NSpec.Assertions/NSpec.Assertions.csproj
@@ -59,8 +59,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MSTest\AssertionExtensions.cs" />
-    <Compile Include="nUnit\AssertionExtensions.cs" />
+    <Compile Include="MSTest\FluentExtensions.cs" />
+    <Compile Include="nUnit\FluentExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
