--- a/NSpecSpecs/packages.config
+++ b/NSpecSpecs/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Mono.Cecil" version="0.9.5.3" />
   <package id="NUnit" version="2.5.7.10213" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
 </packages>
