--- a/NSpec/packages.config
+++ b/NSpec/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="2.5.7.10213" />
+  <package id="NUnit" version="2.5.7.10213" targetFramework="net45" />
 </packages>
