--- a/NSpecSpecs/packages.config
+++ b/NSpecSpecs/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Mono.Cecil" version="0.9.5.3" />
-  <package id="NUnit" version="2.5.7.10213" />
-  <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
+  <package id="Mono.Cecil" version="0.9.5.3" targetFramework="net45" />
+  <package id="NUnit" version="2.5.7.10213" targetFramework="net45" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net45" />
 </packages>
