--- a/SampleSpecs/App.config
+++ b/SampleSpecs/App.config
@@ -1,6 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="SomeConfigEntry" value="Worky" />
+    <add key="SomeConfigEntry" value="Worky"/>
   </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+  </startup>
 </configuration>
