Add asynchronous example

--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -52,7 +52,10 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Domain\AsyncActionRegister.cs" />
     <Compile Include="Domain\ClassContext.cs" />
+    <Compile Include="Domain\AsyncExample.cs" />
+    <Compile Include="Domain\ExampleBase.cs" />
     <Compile Include="Domain\ExampleFailureException.cs" />
     <Compile Include="Domain\Formatters\ConsoleFormatter.cs" />
     <Compile Include="Domain\ContextCollection.cs" />
