Add asynchronous method-level example
As with asynchronous hooks already added, probably there should be more
tests coverage, in many cases cloning existing tests for the sync
equivalent. We're still proofing the framework extension to async, so
for now that might be enough.

--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -72,6 +72,7 @@
     <Compile Include="WebSite\describe_class_level.cs" />
     <Compile Include="Demo\decribe_TicTacToeGame.cs" />
     <Compile Include="WebSite\describe_exception.cs" />
+    <Compile Include="WebSite\describe_async_helpers.cs" />
     <Compile Include="WebSite\describe_helpers.cs" />
     <Compile Include="Demo\describe_method_level_examples.cs">
       <SubType>Code</SubType>
