--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -71,7 +71,9 @@
     <Compile Include="Domain\MethodContext.cs" />
     <Compile Include="Domain\ExceptionNotThrown.cs" />
     <Compile Include="DefaultConventions.cs" />
+    <Compile Include="Domain\AsyncMethodExample.cs" />
     <Compile Include="Domain\MethodExample.cs" />
+    <Compile Include="Domain\MethodExampleBase.cs" />
     <Compile Include="Domain\RunnerInvocation.cs" />
     <Compile Include="Domain\Tags.cs" />
     <Compile Include="Each.cs" />
